--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Arpit Tiwari</title>
-    <link rel="stylesheet" href="D:\Web Dev\CSS mysite\style.css">
+    <link rel="stylesheet" href="style.css">
+   
     <link rel="icon" href="D:\Web Dev\CSS mysite\favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
