--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Arpit Tiwari</title>
     <link rel="stylesheet" href="style.css">
    
-    <link rel="icon" href="D:\Web Dev\CSS mysite\favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
@@ -14,12 +14,12 @@
   <body>
 
 <div class="top-container">
-  <img class="top-cloud"src="D:\Web Dev\CSS mysite\CSS - My Site Images\cloud.png" alt="Cloud image">
+  <img class="top-cloud"src="cloud.png" alt="Cloud image">
 
   <h1>I'm Arpit!</h1>
   <h2>another dreamer.</h2>
-    <img class="bottom-cloud" src="D:\Web Dev\CSS mysite\CSS - My Site Images\cloud.png" alt="Cloud image">
-  <img src="D:\Web Dev\CSS mysite\CSS - My Site Images\mountain.png" alt="Mountain image">
+    <img class="bottom-cloud" src="cloud.png" alt="Cloud image">
+  <img src="mountain.png" alt="Mountain image">
 
 </div>
 <div class="middle-container">
@@ -48,12 +48,12 @@
   <div class="hobbies">
     <h2>My Hobbies.</h2>
     <div class="skill-row">
-      <img class="imagess" src="D:\Web Dev\CSS mysite\photographer.png" alt="">
+      <img class="imagess" src="photographer.png" alt="">
       <h3><a href="https://www.instagram.com/novice.click/">Photography</a></h3>
 
     </div>
     <div class="skill-row">
-      <img class="imagess" src="D:\Web Dev\CSS mysite\ux-design.png" alt="">
+      <img class="imagess" src="ux-design.png" alt="">
       <h3>Design</h3>
 
     </div>
