--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <!-- <p>Decent knowledge in C++/C</p> -->
     </div>
     <div class="skill-row">
-      <img class="imagess front" src="D:\Web Dev\CSS mysite\coding.png" alt="">
+      <img class="imagess front" src="coding.png" alt="">
       <h3>Front End Development</h3>
       <!-- <p>HTML, CSS and JS</p> -->
 
