--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 </div>
 <div class="middle-container">
   <div class="profile">
-    <img src="D:\Web Dev\CSS mysite\Snapchat-1422426973 (1)-modified.png" alt="Arpit's Picture" class="pp">
+    <img src="Snapchat-1422426973 (1)-modified.png" alt="Arpit's Picture" class="pp">
     <h2>Hello.</h2>
-    <p class="intro">a staying-at-home sophomore from IIT-BHU. Presently living in my hometown Shahdol, I click, code and create.</p>
+    <p class="intro">A staying-at-home Chemical Engineering sophomore from IIT-BHU. Presently living in my hometown Shahdol, I click, code and create.</p>
   </div>
   <hr class="h-line">
   <div class="skills">
     <h2>My Skills.</h2>
     <div class="skill-row">
-      <img class="imagess c" src="D:\Web Dev\CSS mysite\c-.png" alt="">
+      <img class="imagess c" src="c-.png" alt="">
       <h3>C++/C</h3>
 
       <!-- <p>Decent knowledge in C++/C</p> -->
